--- a/CORFOGA/app/src/main/AndroidManifest.xml
+++ b/CORFOGA/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         <activity android:name=".Activity.RegionActivity" />
         <activity android:name=".Activity.FarmActivity" />
         <activity android:name=".Activity.AnimalActivity" />
+        <activity android:name=".Activity.AlertInspectionNumber" />
         <activity android:name=".Activity.InspectionActivity"></activity>
     </application>
 
